--- a/src/Clients/Web/React/farm-manager-client/src/components/basic-cow-details/BasicCowDetails.css
+++ b/src/Clients/Web/React/farm-manager-client/src/components/basic-cow-details/BasicCowDetails.css
@@ -1,3 +1,17 @@
-.basicCowContainer { 
+  .cowDetailsContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .cowDetailsBox {
+    width: 50%;
+    height: 50%;
+    border: 1px solid black;
+    box-sizing: border-box;
+  }
+
+  .basicCowContainer { 
     margin: 20px;
   }
